--- a/pages/apprenant .html
+++ b/pages/apprenant .html
@@ -25,13 +25,28 @@
             <img src="../images/Logo-Sonatel-Academy-480_1-1.png" class="img-fluid col-7" alt="">
             <p class="fw-light fs-6 mt-3 mb-3">-MENU</p>
             <ul class="list-group">
-                <li class="list-group-item "><a href="" class="list-group-item list-group-item-action active">Dashboard</a></li>
-                <li class="list-group-item"><a href="" class="list-group-item list-group-item-action">Promos</a></li>
-                <li class="list-group-item"><a href="" class="list-group-item list-group-item-action">Referentiels</a></li>
-                <li class="list-group-item"><a href="" class="list-group-item list-group-item-action">Utilisateurs</a></li>
-                <li class="list-group-item"><a href="" class="list-group-item list-group-item-action">Visisteurs</a></li>
-                <li class="list-group-item"><a href="" class="list-group-item list-group-item-action">Presence</a></li>
-                <li class="list-group-item"><a href="" class="list-group-item list-group-item-action">Evenement</a></li>
+                <li class="list-group-item ">
+                   
+                    <a href="" class="list-group-item list-group-item-action active d-flex align-item-center"> <span class="material-symbols-outlined"> dashboard </span>Dashboard</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="" class="list-group-item list-group-item-action d-flex align-item-center"><span class="material-symbols-outlined"> checkbook </span>Promos</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="" class="list-group-item list-group-item-action d-flex align-item-center"><span class="material-symbols-outlined"> date_range </span>Referentiels</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="" class="list-group-item list-group-item-action d-flex align-item-center"><span class="material-symbols-outlined"> account_circle </span>Utilisateurs</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="" class="list-group-item list-group-item-action d-flex align-item-center"><span class="material-symbols-outlined"> account_circle </span>Visisteurs</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="" class="list-group-item list-group-item-action d-flex align-item-center"><span class="material-symbols-outlined"> account_circle </span>Presence</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="" class="list-group-item list-group-item-action d-flex align-item-center"><span class="material-symbols-outlined"> checkbook </span>Evenement</a>
+                </li>
             </ul>
            
             </div>
