--- a/pages/apprenant .html
+++ b/pages/apprenant .html
@@ -60,13 +60,13 @@
 
             <div class="container col-10 border">
 
-                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12  mt-5  shadow p  rounded">
+                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12 p-1  mt-2  shadow  rounded">
                     <div class="d-flex align-items-center justify-content-around ">
-                        <span class="material-symbols-outlined px-2"> menu</span>
-                        <span class="material-symbols-outlined px-2"> grid_view</span>
+                        <span class="material-symbols-outlined p-2"> menu</span>
+                        <span class="material-symbols-outlined p-2"> grid_view</span>
                         <div class="input-group  d-flex align-items-center border">
                             <input type="text" class="form-control" aria-label="Text input " placeholder="Filtrer">
-                            <span class="material-symbols-outlined px-2 text-secondary"> search</span>
+                            <span class="material-symbols-outlined p-2 text-secondary"> search</span>
                           </div>
 
                     </div>
@@ -88,7 +88,14 @@
                     </div>
                 </div>
                 </div>
-                
+                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12     p-2  rounded">
+                    <div><span class="text-primary">Apprenants</div>
+                    <div><span class="text-primary">Promotion .Liste .Details .Apprenants</span></div>
+                 </div>
+                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12  mt-5  shadow p-3  rounded">
+                   <div><span class="text-primary">Promotions:</span> <span class="text-danger"> Promotion 6</span></div>
+                   <div><span class="text-primary">Referentiel:</span> <span class="text-danger"> Dev Web/Mobile</span></div>
+                </div>
                 <div class="container rounded-3 col-12  mt-3  shadow p-3  rounded">
                     <h4 class="mb-3 px-2">Apprenants</h4>
                     <div class="container col-12 d-flex align-items-center justify-content-between mb-4">
