--- a/pages/apprenant .html
+++ b/pages/apprenant .html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class="container-fluid col-12 d-flex vh-100 ">
-            <div class="container col-2  shadow">
+            <div class="container col-2  shadow-sm">
                 <img src="../images/Logo-Sonatel-Academy-480_1-1.png" class="img-fluid col-7" alt="">
                 <p class="fw-light fs-6 mt-3 mb-3">-MENU</p>
                 <ul class="list-group">
@@ -58,9 +58,9 @@
 
             </div>
 
-            <div class="container col-10 border">
+            <div class="container col-10 ">
 
-                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12 p-1  mt-2  shadow  rounded">
+                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12 p-1  mt-2  shadow-sm  rounded">
                     <div class="d-flex align-items-center justify-content-around ">
                         <span class="material-symbols-outlined p-2"> menu</span>
                         <span class="material-symbols-outlined p-2"> grid_view</span>
@@ -88,17 +88,17 @@
                     </div>
                 </div>
                 </div>
-                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12     p-2  rounded">
+                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12     rounded">
                     <div><span class="text-primary">Apprenants</div>
                     <div><span class="text-primary">Promotion .Liste .Details .Apprenants</span></div>
                  </div>
-                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12  mt-5  shadow p-3  rounded">
+                <div class="container d-flex align-items-center justify-content-between rounded-2 col-12  mt-2  shadow-sm p-3  rounded">
                    <div><span class="text-primary">Promotions:</span> <span class="text-danger"> Promotion 6</span></div>
                    <div><span class="text-primary">Referentiel:</span> <span class="text-danger"> Dev Web/Mobile</span></div>
                 </div>
-                <div class="container rounded-3 col-12  mt-3  shadow p-3  rounded">
-                    <h4 class="mb-3 px-2">Apprenants</h4>
-                    <div class="container col-12 d-flex align-items-center justify-content-between mb-4">
+                <div class="container rounded-3 col-12  mt-3  shadow-sm p-3  rounded">
+                    <h4 class="mb-2 px-2">Apprenants</h4>
+                    <div class="container col-12 d-flex align-items-center justify-content-between mb-2">
                         <div class="col-md-3 ">
                             <h5 class="fs-5">Listes des Apprenants ()</h5>
                         </div>
@@ -131,34 +131,8 @@
                                 <th scope="col">Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row"></th>
-                                <td>Ba</td>
-                                <td>Amadou</td>
-                                <td>amadou@</td>
-                                <td>M</td>
-                                <td>778907653</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <th scope="row"></th>
-                                <td>Ba</td>
-                                <td>Amadou</td>
-                                <td>amadou@</td>
-                                <td>M</td>
-                                <td>778907653</td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <th scope="row"></th>
-                                <td>Ba</td>
-                                <td>Amadou</td>
-                                <td>amadou@</td>
-                                <td>M</td>
-                                <td>778907653</td>
-                                <td></td>
-                            </tr>
+                        <tbody id="tBody">
+                       
                         </tbody>
                     </table>
 
@@ -180,6 +154,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+        <script src="../js/script.js"></script>
 </body>
 
 </html>
